--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-plugin": "^7.17.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
