--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-plugin-jsx": "^0.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -38,15 +39,19 @@
   },
   "devDependencies": {
     "@babel/eslint-plugin": "^7.17.7",
+    "@babel/preset-react": "^7.16.7",
+    "@typescript-eslint/parser": "^5.23.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "typescript": "^4.6.4"
   }
 }
